# hotaru

./: .gitignore  README.md
esphome/: .gitignore  avr-sw.yaml  avr.yaml  bathroom-bathtub-light.yaml  bathroom-main-light.yaml  bathroom-mirror-light.yaml  bathroom-path-light.yaml  bedroom-ac.yaml  bedroom-bed-light.yaml  bedroom-bed-presence.yaml  bedroom-bed.yaml  bedroom-cat-light.yaml  bedroom-desk-plug.yaml  bedroom-intake-fan-plug.yaml  bedroom-mobile-charger.yaml  bedroom-moon-light.yaml  bedroom-presence.yaml  bedroom-ubox.yaml  comms-relay.yaml  doorbell.yaml  hotaru-power.yaml  kettle.yaml  kitchen-balcony-tracker.yaml  kitchen-energy-meter.yaml  kitchen-overhead-relay.yaml  kitchen-presence.yaml  kitchen-water-meter.yaml  kitchen-worktop-light.yaml  kitchen-worktop-socket.yaml  living-room-curtains-motor.yaml  living-room-heater-socket.yaml  living-room-heater.yaml  living-room-humidifier-plug.yaml  living-room-humidifier-socket.yaml  living-room-humidifier-wtank.yaml  living-room-intake-fan-plug.yaml  living-room-media-socket.yaml  living-room-pm25.yaml  living-room-tv-light.yaml  living-room-ubox.yaml  (+21 more)
esphome/common/: base.lts.yaml  base.yaml  bl0937.yaml  bl0942.yaml  energy.yaml  energy_reset.yaml  esp32.yaml  esp32_ble_tracker.yaml  esp8266.yaml  esphome_2023.11.yaml  esphome_2023.7.yaml  idf.yaml  ln882x.yaml  mithermometer_ble.yaml  pzem_addr.yaml  restart.yaml  senseair_s8.yaml  time.yaml  tion_4s.yaml  tion_4s_legacy.yaml  uptime.yaml  wifi_e.yaml  wifi_signal.yaml
esphome/generic/: .gitignore  athom_wall_outlet.yaml  atmt_wb2s_plug.yaml  (+27 more)
(+165 files in other folders)
